# api-pagamentos-flask

./: .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  wsgi.py
.github/: dependabot.yml
.github/workflows/: fly-deploy.yml
instance/: database.db
src/: config.py
src/models/: payment.py
src/routes/: payments.py
src/services/: pix.py
templates/: confirmed_payment.html  payment.html
tests/routes/: test_payments.py
tests/services/: test_pix.py
