[project]
name = "api-pagamentos-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "qrcode>=8.2",
]
